[tool.poetry]
name = "TUKR_tool"
version = "0.1.0"
description = ""
authors = ["SeitaroKusuku"]

[tool.poetry.dependencies]
python = "^3.9.11"
numpy = "^1.22.3"
jax = "^0.4.3"
jaxlib = "^0.4.3"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"
jupyterlab-git = "^0.36.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
tqdm = "^4.64.0"
torch = "^1.11.0"
pandas = "^2.2.2"
japanize-matplotlib = "^1.1.3"
matplotlib-fontja = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
